# ETL-Service-Pipeline

./: LICENSE  README.md  etl_service.db  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
docs/: changelog.md  contributing.md  testing.md
src/etl_service_pipeline/: cli.py  extractor.py  loader.py  service.py  transformer.py
tests/integration/: test_service_pipeline.py
tests/unit/: test_extractor.py  test_loader.py  test_transformer.py
