[metadata]
name = etl-service-pipeline
version = 0.1.0
description = Enterprise ETL Service Pipeline
author = TOD
license = MIT

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[flake8]
max-line-length = 88
exclude = .git,__pycache__,venv,build,dist
extend-ignore = E203, W503  # compatible with Black
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
skip = venv,build,dist

[black]
line-length = 88
target-version = ['py310']
exclude = (venv|build|dist|\.git|\.pytest_cache)

[tool:pytest]
testpaths = tests
addopts = -v --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing
python_files = test_*.py
asyncio_mode = auto
